# discord-log-handler

./: README.md  __init__.py  main.py  pyproject.toml
loggord/: __init__.py  handler.py
