   [build-system]
   requires = ["hatchling"]
   build-backend = "hatchling.build"

   [project]
   name = "discord-log-handler"
   version = "0.1.0"
   description = "A custom log handler for dispatching logging events to a Discord channel"
   readme = "README.md"
   authors = [{ name = "Roberto Scifo" }]
   license = "MIT"
   classifiers = [
       "Programming Language :: Python :: 3",
       "License :: OSI Approved :: MIT License",
       "Operating System :: OS Independent",
   ]
   requires-python = ">=3.10"

   [project.urls]
   Homepage = "https://github.com/RobertoScifo/discord-log-handler"