[build-system]
requires = ["hatchling", "setuptools>=61.0"]
build-backend = "hatchling.build"

[project]
name = "loggord"
version = "0.1.0"
description = "A custom log handler for dispatching records to a Discord channel"
readme = "README.md"
authors = [{ name = "Roberto Scifo" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/RobertoScifo/loggord"

[tool.hatch.build.targets.wheel]
packages = ["loggord"]

[tool.setuptools]
packages = ["loggord"]